<resources>
    <string name="app_name">trabalhoPA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="servi_o">Serviço</string>
    <string name="data">Data</string>
    <string name="id_carro">ID Carro</string>
    <string name="carros">Carros</string>
    <string name="clientes">Clientes</string>
    <string name="servi_os">Serviços</string>
</resources>