<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CarrosFragment">

    <fragment
        android:id="@+id/CarrosFragment"
        android:name="pt.ipg.trabalhopa.FragmentCarros"
        android:label="@string/carros"
        tools:layout="@layout/fragment_carros">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/Clientes" />
        <action
            android:id="@+id/action_FirstFragment_to_thirdFragment"
            app:destination="@id/Serviços" />
    </fragment>
    <fragment
        android:id="@+id/Clientes"
        android:name="pt.ipg.trabalhopa.FragmentClientes"
        android:label="@string/clientes"
        tools:layout="@layout/fragment_clientes">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/CarrosFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_thirdFragment"
            app:destination="@id/Serviços" />
    </fragment>
    <fragment
        android:id="@+id/Serviços"
        android:name="pt.ipg.trabalhopa.FragmentService"
        android:label="@string/servi_os">
        <action
            android:id="@+id/action_thirdFragment_to_SecondFragment"
            app:destination="@id/Clientes" />
        <action
            android:id="@+id/action_thirdFragment_to_FirstFragment"
            app:destination="@id/CarrosFragment" />
    </fragment>
</navigation>